# norma

./: .gitignore  Dockerfile
game/game-C++/bagchal/: bagchal.cpp  bagchal.h  constant.cpp  constant.h  enum.cpp  enum.h  exception.cpp  exception.h  utils.h
norma/: pyproject.toml
norma/norma/: __main__.py  alphabeta_pruning.py  connector.py  model.py
norma/weights/test/: checkpoint  goat.data-00000-of-00001  goat.index  tiger.data-00000-of-00001  tiger.index  train_stats.txt
policynorma/: gameplayrecord.csv  goat.csv  plot.py  tiger.csv
server/: pyproject.toml
server/core/: agent.py  game.py  mcts.py  model.py  state.py  state2.py
